# CMakeList.txt : CMake project for L1-2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (TestProgram "ch3sortTest.cpp" "ch3sortTest.h" "test.h")

# TODO: Add tests and install targets if needed.